--- a/KernelProcessList/KernelProcessList.vcxproj.filters
+++ b/KernelProcessList/KernelProcessList.vcxproj.filters
@@ -10,4 +10,9 @@
       <Extensions>h;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Driver.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
