--- a/KernelProcessList/KernelProcessList.vcxproj
+++ b/KernelProcessList/KernelProcessList.vcxproj
@@ -143,6 +143,9 @@
   <ItemGroup>
     <FilesToPackage Include="$(TargetPath)" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Driver.c" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
